--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
+    <title>GOODFELLAS</title>
+  </head>
+  
   <body>
-   Hello there,
+   Hello there, we are the GOODFELLAS here to assit you in web designing and graphic design
   </body>
 </html>
