--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
    Hello there, we are the GOODFELLAS here to assit you in web designing and graphic design
     <h1>The Begining</h1>
     <img src="https://avatars3.githubusercontent.com/u/46652041? v4">
+    <ol>
+      <li>We are proud and happy to help people in need of this skills and also change their mind perspective<li>
+    </ol>
   </body>
 </html>
