I added a link to Github

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <ol>
       <li>We are proud and happy to help people in need of this skills and also change their mind perspective<li>
     </ol>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </body>
 </html>
